[project]
name = "python5"
version = "0.1.0"
description = "Your project description here"
authors = [
    { name = "Umair Abdullah", email = "ua8839705@gmail.com" },
    { name = "UAserver Studios", email = "uaserverofficial@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.13.0"
dependencies = [
    "ursina",         # Add or remove dependencies as needed
    "pandas",
    "flask",
    "streamlit"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
