[project]
name = "python5"
version = "0.1.0"
description = "Your project description here"
authors = [
    { name = "Umair Abdullah", email = "ua8839705@gmail.com" }
    { name = "UAserver Dev Official Services", email = "uaserverofficial@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
